[tool.poetry]
name = "worker-scheduler"
version = "0.1.0"
description = ""
authors = ["diego-garro <diego.garromolina@yahoo.com>"]
readme = "README.md"
packages = [{include = "worker_scheduler", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.1"
codecov = "^2.1.13"
pytest = "^8.3.2"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
